# ri

./: Cargo.toml  README.md  test
src/: app.rs  buffer.rs  lib.rs  main.rs  parser.rs  reflow.rs  rls.rs  split.rs  tab.rs  ui.rs  window.rs
src/command/: mod.rs  normal_command.rs  operator_command.rs  range_command.rs
src/token/: append_token.rs  command_token.rs  display_token.rs  insert_token.rs  mod.rs  motion_token.rs  normal_token.rs  operator_token.rs  range_token.rs
src/util/: event.rs
tests/: token.rs
