[package]
name = "ri"
version = "0.1.0"
authors = ["Keegan Myers"]
edition = "2018"

[dependencies]
ropey = "1.5.0"
arboard = "3.2.0"
tui = "0.19.0"
env_logger = "0.10.0"
argh = "0.1.5"
log = "0.4.17"
log4rs = "1.2.0"
anyhow = "1.0.65"
syntect = "5.0.0"
uuid = {version = "1.2.1", features = ["v4"]}
unicode-segmentation = "1.2"
unicode-width = "0.1"
async-std = {version = "1.12.0",features = ["attributes"]}
#ra_ap_rust-analyzer = "0.0.141"
crossterm = "0.26.0"
id_tree = "1.8.0"

#![feature(alloc_system)]
#![feature(global_allocator, allocator_api)]
