[package]
name = "ri"
version = "0.1.0"
authors = ["Keegan Myers"]
edition = "2018"

[[bin]]
name = "ri"
path = "src/bin/bin.rs"

[lib]
name = "ri"
path = "src/lib.rs"

[dependencies]
ropey = "1.5.0"
arboard = "3.2.0"
env_logger = "0.10.0"
argh = "0.1.5"
log = "0.4.19"
log4rs = "1.2.0"
anyhow = "1.0.65"
syntect = "5.0.0"
uuid = {version = "1.2.1", features = ["v4"]}
unicode-segmentation = "1.2"
unicode-width = "0.1"
async-std = {version = "1.12.0",features = ["attributes"]}
crossterm = "0.26.0"
id_tree = "1.8.0"
lsp-types = { version = "0.94" }
ra_ap_rust-analyzer = "0.0.200"
lsp-server = "0.7.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
ratatui = {version = "0.26.1", features = ["macros","all-widgets","serde"]} 

#![feature(alloc_system)]
#![feature(global_allocator, allocator_api)]
